@@ -26,9 +26,12 @@ package conseq4j.summon;
 import com.google.common.collect.Range;
 import conseq4j.SpyingTask;
 import conseq4j.TestUtils;
+import static conseq4j.TestUtils.createSpyingTasks;
+import static conseq4j.TestUtils.getIfAllCompleteNormal;
+import static java.util.stream.Collectors.toList;
+import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.Callable;
@@ -36,11 +39,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
-
-import static conseq4j.TestUtils.createSpyingTasks;
-import static conseq4j.TestUtils.getIfAllCompleteNormal;
-import static java.util.stream.Collectors.toList;
-import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Qingtian Wang
@@ -53,7 +51,8 @@ class ConseqServiceFactoryTest {
     }
 
     void assertSingleThread(List<SpyingTask> tasks) {
-        List<String> distinctThreads = tasks.stream().map(SpyingTask::getRunThreadName).distinct().toList();
+        List<String> distinctThreads =
+                tasks.stream().map(SpyingTask::getRunThreadName).distinct().collect(toList());
         assertEquals(1, distinctThreads.size());
     }
 
@@ -62,12 +61,15 @@ class ConseqServiceFactoryTest {
         ConseqServiceFactory withHigherConcurrencyThanTaskCount = ConseqServiceFactory.instance(TASK_COUNT * 2);
 
         List<Future<SpyingTask>> futures = createSpyingTasks(TASK_COUNT).stream()
-                .map(task -> withHigherConcurrencyThanTaskCount.getExecutorService(UUID.randomUUID())
+                .map(task -> withHigherConcurrencyThanTaskCount
+                        .getExecutorService(UUID.randomUUID())
                         .submit(task.toCallable()))
                 .collect(toList());
 
-        final long totalRunThreads =
-                getIfAllCompleteNormal(futures).stream().map(SpyingTask::getRunThreadName).distinct().count();
+        final long totalRunThreads = getIfAllCompleteNormal(futures).stream()
+                .map(SpyingTask::getRunThreadName)
+                .distinct()
+                .count();
         assertTrue(totalRunThreads <= TASK_COUNT);
     }
 
@@ -80,7 +82,8 @@ class ConseqServiceFactoryTest {
         ConseqServiceFactory withLowConcurrency = ConseqServiceFactory.instance(lowConcurrency);
         long lowConcurrencyStart = System.nanoTime();
         List<Future<SpyingTask>> lowConcurrencyFutures = sameTasks.stream()
-                .map(t -> withLowConcurrency.getExecutorService(UUID.randomUUID()).submit(t.toCallable()))
+                .map(t ->
+                        withLowConcurrency.getExecutorService(UUID.randomUUID()).submit(t.toCallable()))
                 .collect(toList());
         TestUtils.awaitFutures(lowConcurrencyFutures);
         long lowConcurrencyTime = System.nanoTime() - lowConcurrencyStart;
@@ -88,7 +91,9 @@ class ConseqServiceFactoryTest {
         ConseqServiceFactory withHighConcurrency = ConseqServiceFactory.instance(highConcurrency);
         long highConcurrencyStart = System.nanoTime();
         List<Future<SpyingTask>> highConcurrencyFutures = sameTasks.stream()
-                .map(task -> withHighConcurrency.getExecutorService(UUID.randomUUID()).submit(task.toCallable()))
+                .map(task -> withHighConcurrency
+                        .getExecutorService(UUID.randomUUID())
+                        .submit(task.toCallable()))
                 .collect(toList());
         TestUtils.awaitFutures(highConcurrencyFutures);
         long highConcurrencyTime = System.nanoTime() - highConcurrencyStart;
@@ -128,7 +133,8 @@ class ConseqServiceFactoryTest {
         List<SpyingTask> tasks = createSpyingTasks(TASK_COUNT);
         UUID sameSequenceKey = UUID.randomUUID();
 
-        tasks.forEach(task -> defaultConseqServiceFactory.getExecutorService(sameSequenceKey).execute(task));
+        tasks.forEach(task ->
+                defaultConseqServiceFactory.getExecutorService(sameSequenceKey).execute(task));
 
         TestUtils.awaitAllComplete(tasks);
         assertSingleThread(tasks);
@@ -142,7 +148,6 @@ class ConseqServiceFactoryTest {
 
             assertThrows(UnsupportedOperationException.class, sequentialExecutor::shutdown);
             assertThrows(UnsupportedOperationException.class, sequentialExecutor::shutdownNow);
-            assertThrows(UnsupportedOperationException.class, sequentialExecutor::close);
             assertFalse(sequentialExecutor.isShutdown());
             assertFalse(sequentialExecutor.isTerminated());
         }
